feat: add server code generation for discriminator with allOf
